# datatricks

./: 'vsdvg  README.rst  pyproject.toml  requirements.txt
datatricks/: __init__.py
tests/: test_datatricks.py
